Fix for release 0.206.0 which broke jumpy.
- getScrollTop() and getScrollLeft() for tile rendering changes to Atom.
- Add querySelect on shadowRoot to fix tests.
- Fix css to use /deep/ for shadow dom etc.
- Fix fetch of the overlayer throughout.
- Fixes #59.
- Fixes #60.
- Remove SEO as atom.io now lists these from the package.json's
  keywords.
- Remove unnecessary duped keywords.
- Fix typo of 'hot keys' -> 'hotkeys'.
- :memo: Update README.md for key bindings.
- :memo: Update README.md for typo.
- :memo: Updates CHANGELOG.md.

--- a/styles/jumpy.less
+++ b/styles/jumpy.less
@@ -23,9 +23,9 @@
     }
 }
 
-.jumpy {
+atom-text-editor /deep/ .jumpy {
     &.label {
-        &.irrelevant {
+        &.irrelevant { // This is a marker to indicate not applicable (when 1 key is entered/known).
             display: none;
         }
         z-index: 2147483647; /* Really high.
